--- a/School/appsettings.json
+++ b/School/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqlServer": "data source=localhost; initial catalog=School; integrated security=true; persist security info=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
