--- a/School/School.csproj
+++ b/School/School.csproj
@@ -33,4 +33,10 @@
     <None Include="C:\Repos\School\School\.editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
